--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "del": "^3.0.0",
+    "path-browserify": "^1.0.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   }
