--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "del": "^3.0.0",
+    "keymaster": "^1.6.2",
     "path-browserify": "^1.0.0",
+    "victor": "^1.1.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   }
