--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "del": "^3.0.0",
     "keymaster": "^1.6.2",
+    "matter-js": "^0.14.2",
     "path-browserify": "^1.0.0",
     "victor": "^1.1.0",
     "webpack": "^4.25.1",
