--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "matter-js": "^0.14.2",
     "pad": "^2.2.1",
     "path-browserify": "^1.0.0",
+    "redom": "^3.16.1",
     "victor": "^1.1.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
